.metadata/.plugins/org.eclipse.cdt.ui/led-4-channels-bim112.build.log
22:23:39 **** Build of configuration Debug for project led-4-channels-bim112 ****
make -r all 
Building file: ../src/app_main.cpp
Invoking: MCU C++ Compiler
arm-none-eabi-c++ -D__NEWLIB__ -DBIM112 -DDEBUG -D__CODE_RED -DCORE_M0 -D__USE_CMSIS=CMSIS_CORE_LPC11xx -DCPP_USE_HEAP -D__LPC11XX__ -I"C:\Users\Olli\CloudStation\uC_Stuff\LPC_workspaces\software-arm-olli\CMSIS_CORE_LPC11xx\inc" -I"C:\Users\Olli\CloudStation\uC_Stuff\Selfbus\software-arm-lib\sblib\inc" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fno-rtti -fno-exceptions -mcpu=cortex-m0 -mthumb -MMD -MP -MF"src/app_main.d" -MT"src/app_main.o" -MT"src/app_main.d" -o "src/app_main.o" "../src/app_main.cpp"
../src/app_main.cpp: In function 'void setup()':
../src/app_main.cpp:16:26: error: base operand of '->' has non-pointer type 'BcuBase'
 #define BCU_ACCESS(x) bcu->x
                          ^
../src/app_main.cpp:60:5: note: in expansion of macro 'BCU_ACCESS'
     BCU_ACCESS(begin)(131, hardwareVersion[5], 0x13);  // we are a MDT weather station, version 1.3
     ^
../src/app_main.cpp:16:26: error: base operand of '->' has non-pointer type 'BcuBase'
 #define BCU_ACCESS(x) bcu->x
                          ^
../src/app_main.cpp:65:9: note: in expansion of macro 'BCU_ACCESS'
     if (BCU_ACCESS(applicationRunning) ())
         ^
../src/app_main.cpp: In function 'void initApplication()':
../src/app_main.cpp:97:9: error: 'channles' was not declared in this scope
         channles [0] =initChannel(0);
         ^
make: *** [src/app_main.o] Error 1

22:23:40 Build Finished (took 544ms)

